# hiraeth

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
.github/: labels.yml
.local/: db.sqlite
.sqlx/: query-03cd1c7eaf364130b4e07a88777159eba4a856a8be51fd5d5d4950193277cc72.json  query-0516e43a5d1ec0e112c560bf177f0094a496c756b0b0456a2066b3eee699c038.json  query-05a22337a0ab1a672280ff59e0ec32056daf65fb9a31f460d3d90ea7a5f7e2d4.json  query-075c2a155934975117089cd9da62f58a1186cf3c70163d3133ef3b5f9ef7c816.json  query-07af79bad7e36d09a3761f3af4b995673fd7939e2c6e727f90eaf34a37f36650.json  query-08a2f6bfba36506cdaee8f59ca8297a58e02c01cbddb25a457cc66ec08941d8f.json  query-0c47013afc7cd7c19e094f110edb6d9a8e317bd16d2da4525316dd863dea38f4.json  query-0ce04ca450a31d7f38063cc95555799b6666db0fa42d2fa5fc88622cb65d5a95.json  query-0dd9386b15cc9adf64abf057b454b5a0a1611e43f30b2ba2ccd6abc8d77e1d42.json  query-11d697b90aad6c1f68cb494845c18ad7dc0bde22f3da3afb0ef32cb21be8f3db.json  query-151d5263bf494f90f0c622a457b53a9ddf29b153918e1ced3f0f4bb487dfe319.json  query-1ac3264e53099b5013f46752be3f85b666035fc9357014d5336b21289494d947.json  query-1b7c7eedbe26226abb1b58ae05db5561fedf9aa3232d5c2cbd522a53bcdd2011.json  query-1b8a787d608d1b1469ee2644deded2a24196fc025c3f9b6488ea29293c93bf2e.json  query-1bd00311179127d749717caa0314cfaac0ae7e2458fe453d29d856abdfad805c.json  query-1d9806a12285b914840297abbc250f9256da2599bfb8cb5089a3c61d98572924.json  query-1fdef050ea445d518e40b4ef153789f00b3454372bec0b64a8f5afb2991744fb.json  query-2457a76566d62a368b69190a95b32156d9cdb1c079d0f0f323e5244ccc2c7ba2.json  (+70 more)
docs/: README.md
hiraeth_auth/: Cargo.toml
hiraeth_auth/src/: authorizer.rs  lib.rs  sig_v4.rs
hiraeth_core/: Cargo.toml
hiraeth_core/src/: action.rs  arn_util.rs  config.rs  lib.rs  macros.rs  protocol.rs  request.rs  tracing.rs
hiraeth_core/src/auth/: eval.rs  mod.rs  policy.rs  principal.rs  util.rs
hiraeth_http/: Cargo.toml
hiraeth_iam/: Cargo.toml
hiraeth_iam/src/: auth.rs  authorize.rs  error.rs  lib.rs  macros.rs  user.rs
hiraeth_iam/src/actions/: attach_user_policy.rs  create_access_key.rs  create_policy.rs  create_user.rs  delete_policy.rs  delete_user.rs  detach_user_policy.rs  get_policy.rs  get_policy_version.rs  get_user.rs  get_user_policy.rs  list_access_keys.rs  list_attached_user_policies.rs  mod.rs  put_user_policy.rs  util.rs
hiraeth_integration_tests/: Cargo.toml
hiraeth_integration_tests/tests/: iam.rs  sns.rs  sqs.rs  sqs_tf.rs
hiraeth_integration_tests/tests/common/: iam.rs  mod.rs  sns.rs  sqs.rs
hiraeth_router/: Cargo.toml
hiraeth_router/src/: authorizer.rs  lib.rs  resolved_request.rs  service.rs
hiraeth_runtime/: Cargo.toml
hiraeth_runtime/src/: app.rs  lib.rs  main.rs  request.rs  serve.rs
hiraeth_sns/: Cargo.toml
hiraeth_sns/src/: auth.rs  error.rs  lib.rs  macros.rs  store.rs
hiraeth_sns/src/actions/: action_support.rs  create_topic.rs  delete_topic.rs  get_subscription_attributes.rs  get_topic_attributes.rs  list_subscriptions.rs  list_subscriptions_by_topic.rs  list_tags_for_resource.rs  list_topics.rs  mod.rs  publish.rs  set_subscription_attributes.rs  set_topic_attributes.rs  subscribe.rs  tag_resource.rs  unsubscribe.rs  untag_resource.rs
hiraeth_sqs/: Cargo.toml
hiraeth_sqs/src/: auth.rs  change_message_visibility.rs  delete_message.rs  error.rs  lib.rs  list_queues.rs  macros.rs  operations.rs  queue.rs  queue_attributes.rs  receive_message.rs  send_message.rs  set_queue_attributes.rs  tags.rs  util.rs
hiraeth_sqs/src/actions/: action_support.rs  change_message_visibility.rs  change_message_visibility_batch.rs  create_queue.rs  delete_message.rs  delete_message_batch.rs  delete_queue.rs  get_queue_attributes.rs  get_queue_url.rs  list_queue_tags.rs  list_queues.rs  mod.rs  purge_queue.rs  queue_attribute_support.rs  queue_support.rs  receive_message.rs  send_message.rs  send_message_batch.rs  set_queue_attributes.rs  tag_queue.rs  tag_support.rs  untag_queue.rs
hiraeth_store_sqlx/: Cargo.toml
hiraeth_store_sqlx/migrations/: 20260331132240_AccessKeys.sql  20260331132240_Auth.sql  20260401025213_SQSQueue.sql  20260402132203_SQSMessage.sql  20260403090000_SQSMessageTraceHeader.sql  20260415093000_SQSQueueTags.sql  20260422020055_IAMInlinePolicy.sql  20260423110000_IAMPrincipalMetadata.sql  20260427003548_IAMInlinePolicy.sql  20260427003548_IAMManagedPolicy.sql  20260427181604_IAMUserPolicyAttachment.sql  20260428170000_Trace.sql  20260502000000_SNSTopic.sql  20260502000001_SNSSubscription.sql  20260513000000_SNSTopicTags.sql
hiraeth_store_sqlx/src/: access_key_store.rs  lib.rs  principal.rs  sns.rs  sqs.rs  trace.rs
hiraeth_store_sqlx/src/iam/: access_key_store.rs  managed_policy_store.rs  mod.rs  principal.rs  principal_inline_policy_store.rs
hiraeth_sts/: Cargo.toml
hiraeth_sts/src/: error.rs  lib.rs
hiraeth_sts/src/actions/: get_caller_identity.rs  mod.rs  util.rs
hiraeth_web/: Cargo.toml  README.md  build.rs  package-lock.json  package.json
hiraeth_web/assets/: app.css  app.js  app.tailwind.css
hiraeth_web/src/: components.rs  error.rs  lib.rs  templates.rs  traces.rs
hiraeth_web/src/iam/: mod.rs
hiraeth_web/src/sns/: mod.rs
hiraeth_web/src/sqs/: mod.rs
hiraeth_web/templates/: error.html  home.html  layout.html
hiraeth_web/templates/components/: action_card.html  empty_state.html  feedback_toast.html  metadata_list.html  page_header.html  stat_block_grid.html  summary_card_grid.html
hiraeth_web/templates/iam/: dashboard.html  managed_policy_detail.html  principal_detail.html
hiraeth_web/templates/sns/: dashboard.html  topic_detail.html  topics.html
hiraeth_web/templates/sns/fragments/: dashboard_stats.html  subscription_list.html  topic_list.html
hiraeth_web/templates/sqs/: dashboard.html  queue_detail.html  queues.html
hiraeth_web/templates/sqs/fragments/: dashboard_stats.html  message_list.html  queue_detail_stats.html  queue_list.html
hiraeth_web/templates/traces/: detail.html  list.html
xtask/: Cargo.toml
(+31 files in other folders)
