[package]
name = "hiraeth_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
hex = "0.3"
hmac = "0.13"
hiraeth_core = { path = '../hiraeth_core' }
hiraeth_http = { path = '../hiraeth_http'}
hiraeth_store = { path = '../hiraeth_store' }
urlencoding = "2.1"
sha2 = "0.11"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
