[package]
name = "hiraeth_core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
hiraeth_http = { path = "../hiraeth_http" }
hiraeth_store = { path = "../hiraeth_store" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
wildmatch = "2.6.0"
chrono = "0.4"
url = "2.5"
