[package]
name = "hiraeth_core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
hiraeth_http = { path = "../hiraeth_http" }
hiraeth_store = { path = "../hiraeth_store" }
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
wildmatch = "2.6.0"
chrono = "0.4"
url = "2.5"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.45", features = ["macros", "rt"] }
