[package]
name = "hiraeth_iam"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
hiraeth_auth = { path = "../hiraeth_auth" }
hiraeth_core = { path = "../hiraeth_core" }
hiraeth_router = { path = "../hiraeth_router" }
hiraeth_store = { path = "../hiraeth_store" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
chrono = "0.4"
hiraeth_http = { path = "../hiraeth_http" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
