[package]
name = "hiraeth_integration_tests"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
anyhow = "1.0"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-iam = "1"
aws-sdk-sns = "1"
aws-sdk-sqs = "1"
hiraeth_iam = { path = "../hiraeth_iam" }
hiraeth_runtime = { path = "../hiraeth_runtime" }
hiraeth_store = { path = "../hiraeth_store" }
hiraeth_store_sqlx = { path = "../hiraeth_store_sqlx" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "chrono" ] }
tempfile = "3"
terraform-wrapper = {version = "0.4", features = ["config"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net"] }
uuid = { version = "1.18", features = ["v4"] }
