[package]
name = "hiraeth_router"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
hiraeth_core = { path = "../hiraeth_core" }
tracing = "0.1"

[dev-dependencies]
chrono = "0.4"
hiraeth_http = { path = "../hiraeth_http" }
hiraeth_store = { path = "../hiraeth_store" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
