[package]
name = "hiraeth_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
hiraeth_auth = { path = "../hiraeth_auth" }
hiraeth_http = { path = "../hiraeth_http" }
hiraeth_router = { path = "../hiraeth_router" }
hiraeth_sqs = { path = "../hiraeth_sqs" }
hiraeth_store = { path = "../hiraeth_store" }
hiraeth_store_sqlx = { path = "../hiraeth_store_sqlx" }
http = { version = "1.4" }
http-body-util = "0.1"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net"] }
