[package]
name = "hiraeth_store_sqlx"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4" }
hiraeth_core = { path = "../hiraeth_core" }
hiraeth_store = { path = "../hiraeth_store" }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "migrate", "chrono" ] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
