[package]
name = "hiraeth_web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
askama = "0.14"
axum = { version = "0.8", default-features = false, features = ["form", "http1", "json", "query", "tokio"] }
chrono = "0.4"
hiraeth_store = { path = "../hiraeth_store" }
hiraeth_store_sqlx = { path = "../hiraeth_store_sqlx" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["net"] }
tower-http = { version = "0.6", features = ["compression-br", "compression-gzip", "fs", "set-header"] }
urlencoding = "2.1"
uuid = { version = "1.18", features = ["v4"] }
